# onnx_embedding_models

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/onnx_embedding_models/: __init__.py  crossencoder.py  embedding.py  model.py  registry.py  utils.py
